--- a/Client/Admin/AdminView.html
+++ b/Client/Admin/AdminView.html
@@ -30,85 +30,31 @@
     </style>
   </head>
   <body>
-    <h1>Admin Dashboard</h1>
-
     <!-- Sections to be toggled -->
-    <div id="listViewContainer">
-        <div class="container" id="createProjectSection">
-          <h2>Create New Project</h2>
-          <label for="projectTitleInput">Project Title:</label>
-          <input type="text" id="projectTitleInput" placeholder="Enter project title">
-          <button id="createProjectButton">Create Project</button>
-        </div>
+    <div id="listViewContainer"> <!-- This will be visible by default -->
+      <div class="container" id="createProjectSection">
+        <h2>Create New Project</h2>
+        <!-- ... input and button ... -->
+      </div>
 
-        <div class="container" id="projectListSection">
-            <h2>Existing Projects</h2>
-            <div id="adminProjectListContainer">
-                <!-- Projects will be dynamically inserted here -->
-            </div>
-        </div>
-    </div>
+      <div class="container" id="projectListSection">
+          <h2>Existing Projects</h2>
+          <div id="adminProjectListContainer"></div>
+      </div>
+  </div>
 
-    <div class="container" id="editViewContainer" style="display:none;"> <!-- Hidden by default -->
-        <button id="backToProjectsListButton">Back to Projects List</button>
-        <h2 id="editingProjectTitle">Editing Project: </h2>
-        <p><em>(Project editing controls and canvas will appear here in later phases)</em></p>
-        <!-- Canvas and other edit controls will go here in later steps -->
-    </div>
+  <div class="container" id="editViewContainer" style="display:none;"> <!-- Hidden by default -->
+      <button id="backToProjectsListButton">Back to Projects List</button>
+      <h2 id="editingProjectTitle">Editing Project: </h2>
+      <p><em>(Project editing controls and canvas will appear here in later phases)</em></p>
+  </div>
 
-    <div id="messageArea"></div> <!-- Moved message area to be always visible -->
+  <div id="messageArea"></div>
 
-    <!-- Include Loading Spinner -->
-    <?!= include('Client/Shared/LoadingSpinner'); ?>
+  <!-- Include Loading Spinner -->
+  <?!= include('Client/Shared/LoadingSpinner'); ?>
 
-    <script type="text/javascript">
-      // This block will now fetch server data and THEN make it available
-      // to the main Admin_JS logic.
-      // We need a way to signal Admin_JS that this data is ready.
-      // A simple way is to call an initialization function in Admin_JS.
-
-      function initializeAdminAppWithServerData(serverData) {
-        const MODE_FROM_SERVER_JS = serverData.mode;
-        const PROJECT_ID_FROM_SERVER_JS = serverData.projectId;
-        
-        console.log("CLIENT_SIDE AdminView.html (after getServerData): Mode -", MODE_FROM_SERVER_JS, 
-                    "(type:", typeof MODE_FROM_SERVER_JS, ") ProjectID -", PROJECT_ID_FROM_SERVER_JS, 
-                    "(type:", typeof PROJECT_ID_FROM_SERVER_JS, ")");
-
-        // Now make these available to adminAppState or call an init function in Admin_JS
-        if (window.adminApp && typeof window.adminApp.initialize === 'function') {
-          window.adminApp.initialize(MODE_FROM_SERVER_JS, PROJECT_ID_FROM_SERVER_JS);
-        } else {
-          console.error("Admin_JS.html or adminApp.initialize function not ready yet.");
-          // Fallback: store globally, though less clean
-          window.GLOBAL_MODE_FROM_SERVER = MODE_FROM_SERVER_JS;
-          window.GLOBAL_PROJECT_ID_FROM_SERVER = PROJECT_ID_FROM_SERVER_JS;
-        }
-      }
-
-      // Function to parse current URL parameters client-side
-      function getInitialPageParameters() {
-        const params = new URLSearchParams(window.location.search);
-        return {
-          page: params.get('page'),
-          projectId: params.get('projectId')
-        };
-      }
-      
-      // Call a server function that passes the data - defined in Code.gs
-      google.script.run
-        .withSuccessHandler(initializeAdminAppWithServerData) // This function will call the main app init
-        .withFailureHandler(function(err) {
-          console.error("Error calling getServerData:", err);
-          // Handle error: perhaps initialize with default 'list' mode
-          if (window.adminApp && typeof window.adminApp.initialize === 'function') {
-            window.adminApp.initialize('list', null); // Default on error
-          }
-        })
-        .getServerData(getInitialPageParameters()); // Pass current URL params
-    </script>
-
-    <!-- Client-side JavaScript (Admin_JS.html) -->
-    <?!= include('Client/Admin/Admin_JS'); ?> 
+  <!-- Client-side JavaScript - NO MORE SCRIPT BLOCK BEFORE THIS FOR getServerData -->
+  <?!= include('Client/Admin/Admin_JS'); ?> 
   </body>
 </html>
