P1S6 Viewer View implementation

--- a/Client/Viewer/ViewerView.html
+++ b/Client/Viewer/ViewerView.html
@@ -1,1 +1,70 @@
-<h1>Viewer View</h1>
+<!DOCTYPE html>
+<html>
+  <head>
+    <base target="_top">
+    <title>Interactive Training Modules</title>
+    <style>
+      body { font-family: Arial, sans-serif; margin: 20px; background-color: #f9f9f9; color: #333; }
+      .container { background-color: #fff; padding: 20px; margin-bottom: 20px; border-radius: 8px; box-shadow: 0 2px 10px rgba(0,0,0,0.05); }
+      h1 { color: #333; text-align: center; margin-bottom: 30px;}
+      
+      .project-list-viewer {
+        list-style-type: none;
+        padding: 0;
+      }
+      .project-card-viewer {
+        background-color: #eef;
+        border: 1px solid #ccd;
+        padding: 15px 20px;
+        margin-bottom: 15px;
+        border-radius: 6px;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+      }
+      .project-card-viewer h3 {
+        margin: 0;
+        font-size: 1.2em;
+        color: #2c3e50;
+      }
+      .view-project-button {
+        padding: 8px 12px;
+        cursor: pointer;
+        background-color: #3498db;
+        color: white;
+        border: none;
+        border-radius: 4px;
+        font-size: 0.9em;
+      }
+      .view-project-button:hover {
+        background-color: #2980b9;
+      }
+
+      #messageAreaViewer { margin-top: 15px; padding: 10px; border: 1px solid transparent; border-radius: 3px; min-height: 1.5em; }
+      .success { border-color: green; background-color: #d4edda; color: #155724; } /* Reusing admin styles */
+      .error { border-color: red; background-color: #f8d7da; color: #721c24; } /* Reusing admin styles */
+
+      /* Spinner styles - assuming it's the same as admin's */
+      #loadingSpinner { display:none; position:fixed; top:0; left:0; width:100%; height:100%; background-color:rgba(255,255,255,0.7); z-index:10000; justify-content:center; align-items:center; }
+      .loader { border: 8px solid #f3f3f3; border-top: 8px solid #3498db; border-radius: 50%; width: 60px; height: 60px; animation: spin 1s linear infinite; }
+      @keyframes spin { 0% { transform: rotate(0deg); } 100% { transform: rotate(360deg); } }
+    </style>
+  </head>
+  <body>
+    <div class="container">
+      <h1>Available Training Modules</h1>
+      <div id="viewerProjectListContainer">
+        <!-- Active projects will be dynamically inserted here -->
+        <p>Loading projects...</p>
+      </div>
+    </div>
+
+    <div id="messageAreaViewer"></div> <!-- For success/error messages for viewer -->
+
+    <!-- Include Loading Spinner (ensure Client/Shared/LoadingSpinner.html exists and is correct) -->
+    <?!= include('Client/Shared/LoadingSpinner'); ?>
+
+    <!-- Client-side JavaScript for Viewer -->
+    <?!= include('Client/Viewer/Viewer_JS'); ?> 
+  </body>
+</html>
