--- a/Client/Admin/AdminView.html
+++ b/Client/Admin/AdminView.html
@@ -3,6 +3,8 @@
   <head>
     <base target="_top">
     <title>Admin Dashboard</title>
+    <!-- ** IMPORTANT: Include Fabric.js library from CDN ** -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/fabric.js/5.3.0/fabric.min.js"></script>
     <style>
       body { font-family: Arial, sans-serif; margin: 20px; background-color: #f4f4f4; color: #333; }
       .container { background-color: #fff; padding: 20px; margin-bottom: 20px; border-radius: 8px; box-shadow: 0 2px 10px rgba(0,0,0,0.1); }
@@ -70,7 +72,6 @@
           <canvas id="fabricCanvasElement"></canvas>
         </div>
         
-        <!-- Slide management UI (Phase 2) -->
         <!-- Slide management UI (Phase 2) -->
         <!-- <div id="slideThumbnailsContainer"></div> -->
         <!-- <button id="addSlideButton">Add Slide</button> -->
